option('python', type : 'string', value : 'python3')
option('pycairo', type : 'feature', value : 'auto', description : 'build with pycairo integration')
option('tests', type : 'boolean', value : true, description : 'build unit tests')
option('wheel', type : 'boolean', value : false, description : 'build for a Python wheel')
