[project]
name = "PyGObject"
description = "Python bindings for GObject Introspection"
license = { text = "GNU Lesser General Public License v2.1 (LGPLv2.1)" }
authors = [
    { name="James Henstridge", email="james@daa.com.au" }
]
maintainers = [
    { name="Simon Feltman", email="sfeltman@src.gnome.org" },
    { name="Christoph Reiter" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9, <4.0"
dependencies = [
    "pycairo>=1.16"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://pygobject.gnome.org"
Repository = "https://gitlab.gnome.org/GNOME/pygobject.git"
Changelog = "https://gitlab.gnome.org/GNOME/pygobject/-/blob/main/NEWS"

[tool.pdm.dev-dependencies]
build = [
    "meson-python",
    "ninja",
    "pycairo",
]
test = [
    "pytest",
    "pytest-cov",
    "flake8",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-copybutton>=0.5.2",
    "furo",
]

[tool.pdm.options]
install = [
    "--no-isolation",
    "--config-setting=setup-args=-Dtests=true",
    "--config-setting=setup-args=-Dbuildtype=debug",
    "--config-setting=editable-verbose=true",
]
build = ["--no-wheel"]

[tool.pdm.scripts]
pre_install = "{pdm} sync --skip=:all --group=build --no-self"

[tool.meson-python.args]
setup = ["-Dtests=false", "-Dwheel=true", "--wrap-mode=nofallback"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = "test_*.py"
addopts = [
    "--import-mode=importlib",
]

[build-system]
build-backend = "mesonpy"
requires = ["meson-python>=0.12.1", "pycairo>=1.16"]
