PLATFORM_VERSION = 2.0

bin_SCRIPTS = pygobject-codegen-$(PLATFORM_VERSION)

codegendir = $(pkgdatadir)/$(PLATFORM_VERSION)/codegen

codegen_PYTHON = \
	__init__.py \
	argtypes.py \
	reversewrapper.py \
	code-coverage.py \
	codegen.py \
	definitions.py \
	defsconvert.py \
	defsgen.py \
	defsparser.py \
	docextract.py \
	docextract_to_xml.py \
	docgen.py \
	h2def.py \
	defsgen.py \
	createdefs.py \
	mergedefs.py \
	missingdefs.py \
	mkskel.py \
	override.py \
	scanvirtuals.py \
	scmexpr.py

EXTRA_DIST = README.defs pygobject-codegen-$(PLATFORM_VERSION).in
